# makimono

./: .gitignore  Cargo.toml  Dockerfile.frontend  LICENSE  PLAN.md  README.md  Trunk.toml  compose.yaml  index.html  install.ps1  install.sh  output.css  package-lock.json  package.json  tailwind.config.js
.github/workflows/: auto-release-bootstrapper.yml  deploy.yml
crates/api/: Cargo.toml  build.rs
crates/api/src/: embedded.rs  main.rs
crates/db-reader/src/: blocks.rs  contracts.rs  lib.rs  transactions.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html  output.css  package-lock.json
crates/frontend/src/: lib.rs
crates/makimono/src/: main.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/: DEVELOPMENT.md
docs/notes/: DEPLOYMENT.md  SCRATCHPAD.md
scripts/: build_dist.sh
