[package]
name = "frontend"
version.workspace = true
edition = "2021"

[dependencies]
visualizer-types = { path = "../types" }
leptos.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Request", "RequestInit", "Response", "Headers",
    "Document", "HtmlElement", "Element", "Blob", "BlobPropertyBag",
    "Url", "Navigator", "Clipboard"
] }
js-sys = "0.3"
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"
urlencoding = "2"

[lib]
crate-type = ["cdylib", "rlib"]
